# voxelius

./: .clang-format  .gitmodules  CMakeLists.txt
assets/config/: client.toml
assets/voxels/: stone.json
common/: CMakeLists.txt  clock.hpp  cmdline.cpp  cmdline.hpp  config.hpp  crc64.cpp  crc64.hpp  cxpr.hpp  fstools.cpp  fstools.hpp  mixin.hpp  strtools.cpp  strtools.hpp  types.hpp  vfs.cpp  vfs.hpp
common/math/: CMakeLists.txt  angle.hpp  constexpr.hpp  crc64.cpp  crc64.hpp  frustum.cpp  frustum.hpp
common/util/: CMakeLists.txt  include.cpp  include.hpp  randstr.hpp  split.cpp  split.hpp
core/: CMakeLists.txt  cmdline.cpp  config.hpp  mixin.hpp  vfs.cpp  vfs.hpp
core/math/: CMakeLists.txt  angle.hpp  constexpr.hpp  crc64.cpp  crc64.hpp  frustum.cpp  frustum.hpp
core/util/: CMakeLists.txt  clock.hpp  include.cpp  include.hpp  randstr.hpp  spdlog_sinks.hpp
game/: CMakeLists.txt  main.cpp
game/client/: CMakeLists.txt  atlas.cpp  atlas.hpp  client.cpp  client.hpp  game.cpp  game.hpp  globals.cpp  globals.hpp  image.cpp  image.hpp  input.cpp  input.hpp  main.cpp  main.hpp  model_interp.cpp  model_interp.hpp  model_set.cpp  model_set.hpp  phys_interp.cpp  phys_interp.hpp  player_move.cpp  player_move.hpp  screen.cpp  screen.hpp  texture_array.cpp  texture_array.hpp  vclient.cpp  vclient.hpp
game/client/comp/: camera.hpp  interp.hpp  interp_transform.hpp  model.hpp  model_matrix.hpp
game/client/events/: cursor_move.hpp  keyboard_key.hpp  mouse_button.hpp  mouse_scroll.hpp  screen_size.hpp  window_size.hpp
game/client/gl/: CMakeLists.txt  buffer.hpp  context.cpp  context.hpp  drawcmd.hpp  framebuffer.hpp  object.hpp  pipeline.hpp  renderbuffer.hpp  sampler.hpp  shader.hpp  texture.hpp  vertex_array.hpp
game/client/glxx/: buffer.hpp  drawcmd.hpp  framebuffer.hpp  fwd.hpp  object.hpp  pipeline.hpp  pixel_format.hpp  renderbuffer.hpp  sampler.hpp  shader.hpp  texture.hpp  vertex_array.hpp
game/server/: CMakeLists.txt
game/shared/: CMakeLists.txt  chunks.cpp  chunks.hpp  const.hpp  convert.hpp  globals.cpp  globals.hpp  types.hpp
game/shared/comp/: body.hpp  chunk.hpp  player.hpp  transform.hpp  velocity.hpp
game/shared/events/: chunk_create.hpp  chunk_destroy.hpp  voxel_set.hpp
rwroot/: test.txt
rwroot/sub/path/: test.txt
